# c-boilerplate-cmake

./: CMakeLists.txt  README.md
src/: main.c  main.cpp
